<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/nav_groups"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/groups"/>

    <item
        android:id="@+id/nav_challenges"
        android:icon="@drawable/ic_challenge_black_24dp"
        android:title="@string/challenges"/>


    <item
        android:id="@+id/nav_routines"
        android:icon="@drawable/ic_routine_24dp"
        android:title="@string/routines"/>

    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_local_store_black_24dp"
        android:title="@string/store"/>



    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"/>

</menu>